--- a/Windows/VisualStudio/vkquake.vcxproj.filters
+++ b/Windows/VisualStudio/vkquake.vcxproj.filters
@@ -343,6 +343,12 @@
     <ClCompile Include="..\..\Shaders\Compiled\screen_effects_10bit_scale_sops_comp.c">
       <Filter>Shaders\Compiled</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Shaders\Compiled\particle_frag.c">
+      <Filter>Shaders\Compiled</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Shaders\Compiled\particle_vert.c">
+      <Filter>Shaders\Compiled</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Quake\snd_codec.h">
@@ -626,6 +632,12 @@
       <Filter>Shaders</Filter>
     </None>
     <None Include="..\..\Shaders\screen_effects_10bit_scale_sops.comp">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="..\..\Shaders\particle.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="..\..\Shaders\particle.vert">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
