--- a/Windows/VisualStudio/vkquake.vcxproj
+++ b/Windows/VisualStudio/vkquake.vcxproj
@@ -326,6 +326,7 @@ copy "$(SolutionDir)\..\SDL2\lib64\*.dll" "$(TargetDir)"</Command>
     <ClCompile Include="..\..\Shaders\Compiled\showtris_frag.c" />
     <ClCompile Include="..\..\Shaders\Compiled\showtris_vert.c" />
     <ClCompile Include="..\..\Shaders\Compiled\sky_box_frag.c" />
+    <ClCompile Include="..\..\Shaders\Compiled\sky_box_vert.c" />
     <ClCompile Include="..\..\Shaders\Compiled\sky_layer_frag.c" />
     <ClCompile Include="..\..\Shaders\Compiled\sky_layer_vert.c" />
     <ClCompile Include="..\..\Shaders\Compiled\world_frag.c" />
@@ -427,6 +428,7 @@ copy "$(SolutionDir)\..\SDL2\lib64\*.dll" "$(TargetDir)"</Command>
     <None Include="..\..\Shaders\showtris.frag" />
     <None Include="..\..\Shaders\showtris.vert" />
     <None Include="..\..\Shaders\sky_box.frag" />
+    <None Include="..\..\Shaders\sky_box.vert" />
     <None Include="..\..\Shaders\sky_layer.frag" />
     <None Include="..\..\Shaders\sky_layer.vert" />
     <None Include="..\..\Shaders\world.frag" />
